# Atividade_01_mestrado_bd

./: .gitignore  README.md  atividade_01.ipynb  main.py  pyproject.toml
