[project]
name = "atividade-01-mestrado-bd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbduck>=0.1.0",
    "duckdb>=1.5.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "pysus>=1.0.1",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
]
